feat(core, docs): Aprimora lógica de busca e adiciona documentação completa
Esta atualização robustece o projeto com melhorias significativas na lógica de negócio, correções de bugs e a criação de uma documentação detalhada.

Principais alterações:

- **Lógica de Busca de CEST Aprimorada**: A consulta de CEST foi refatorada para retornar apenas os resultados da correspondência mais específica (prefixo de NCM mais longo). Isso evita ambiguidades e garante a precisão dos dados fiscais, afetando tanto a API (`app.js`) quanto a função de exportação (`generateDatabase.js`).
- **Correção na Limpeza de NCM**: Ajustado o processamento de dados do CEST em `generateDatabase.js` para remover quaisquer caracteres não numéricos dos códigos NCM, corrigindo um bug onde vírgulas eram salvas no banco de dados.

- **Criação do README.md**: Adicionado um arquivo README.md completo para o projeto.
- **Detalhes de Uso e Instalação**: O README agora inclui um guia passo a passo para instalação, configuração e uso dos endpoints da API.
- **Guia de Produção com PM2**: Incluída uma seção detalhada sobre como implantar e gerenciar a aplicação em um ambiente de produção usando PM2, cobrindo tanto o processo da API (`app.js`) quanto o do atualizador (`generateDatabase.js`).

- **Melhora no .gitignore**: A regra para ignorar o banco de dados foi melhorada para `openfiscal.db*`, garantindo que arquivos auxiliares do SQLite (como `-wal`, `-shm`) também sejam ignorados.

--- a/package.json
+++ b/package.json
@@ -1,19 +1,28 @@
 {
-  "name": "ibptconverter",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "openfiscal-api",
+  "version": "2.0.0",
+  "description": "API otimizada para consulta de dados fiscais IBPT e CEST, com baixo uso de memória utilizando SQLite.",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node app.js",
+    "update-db": "node generateDatabase.js"
   },
+  "keywords": [
+    "ncm",
+    "cest",
+    "ibpt",
+    "api",
+    "fiscal"
+  ],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "axios": "^1.7.7",
-    "cheerio": "^1.0.0",
+    "axios": "^1.7.2",
+    "better-sqlite3": "^11.1.2",
+    "cheerio": "^1.0.0-rc.12",
     "csvtojson": "^2.0.10",
-    "express": "^4.21.0",
+    "express": "^4.19.2",
+    "json2csv": "^6.0.0-alpha.2",
     "node-cron": "^3.0.3"
   }
 }
